--- a/.ci/template.mustache
+++ b/.ci/template.mustache
@@ -21,6 +21,7 @@ env:
     - DATABASE_URL=postgresql://postgres@localhost/benchmark
     - COLLECT=off
     - CLEAN=off
+    - SLEEP=5
   jobs:
     {{#frameworks}}
       - FRAMEWORK={{.}}
